[BUGFIX] Align docheader and pagetree toppanel correctly
Releases: master, 7.6
Resolves: #74324
Reviewed-on: https://review.typo3.org/47572
Tested-by: Frank Naegler <frank.naegler@typo3.org>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -7854,7 +7854,16 @@ button.close {
   margin-bottom: 0;
 }
 .module-docheader .module-docheader-bar .form-group {
+  vertical-align: top;
   margin: 0;
+}
+@media (min-width: 768px) {
+  .module-docheader .module-docheader-bar .form-group {
+    display: inline-block;
+  }
+}
+.module-docheader .module-docheader-bar .form-group .form-control {
+  vertical-align: top;
 }
 .module-docheader .module-docheader-bar .form-inline-spaced {
   margin: 0;
@@ -9916,6 +9925,7 @@ ul.typo3-messages {
   overflow: visible;
 }
 .typo3-pagetree-toppanel .x-btn button {
+  padding: 0;
   font-size: inherit;
 }
 .typo3-pagetree-toppanel-filter {
@@ -11354,7 +11364,7 @@ a.badge-danger:focus {
 }
 .btn-sm,
 .btn-group-sm > .btn {
-  min-height: 26px;
+  height: 26px;
 }
 .btn-group {
   font-size: 0;
